--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="Assets/Resume/Patrick_Walker_QA.PDF" target=" " download>Resume</a>
+                    <a href="Assets/Resume/Patrick_Walker_QA.PDF" target=" " >Resume</a>
                 </li>
             </ul>
         </nav>
