modified html, style sheet, and added images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/CSS/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/PWFavicon.png"/>
     <title>Patrick E. Walker Portfolio</title>
 </head>
 
@@ -26,7 +27,7 @@
                     <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    <a href="Assets/Resume/Patrick_Walker_QA.PDF">Resume</a>
+                    <a href="Assets/Resume/Patrick_Walker_QA.PDF" target="_blank" >Resume</a>
                 </li>
             </ul>
         </nav>
@@ -70,20 +71,24 @@
         </div>
         <div class= "work-container">   
             <aside id="work" class="work">
-                <article>
+                <article class="work-box">
+                    <h3 class = "work-header" >Horiseon-Refactor</h3>
                 <a href="https://pat31477.github.io/Horiseon/" target=" " ><img src="Assets\Images\demo-horiseon-website.jpg" class="thumbnail"/></a>
                 </article>
 
-                <article>
+                <article class="work-box">
+                    <h3 class = "work-header" >Scratch Mouse Shooter</h3>
                 <a href="https://scratch.mit.edu/projects/476561522" target=" "><img src="Assets\Images\scratch.png" class="thumbnail"/></a>
                 </article>
 
-                <article>
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/250" target="_blank" class="thumbnail"/></a>
+                <article class="work-box">
+                    <h3 class = "work-header" >Coming Soon</h3>
+                <a href="https://placeholder.com" target="_blank" ><img src="Assets/Images/coming-soon.jpg"  class="thumbnail"/></a>
                 </article>
 
-                <article>
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/250" target="_blank" class="thumbnail"/></a>
+                <article class="work-box">
+                    <h3 class = "work-header" >Coming Soon</h3>
+                <a href="https://placeholder.com" target="_blank" ><img src="Assets/Images/coming-soon.jpg"  class="thumbnail"/></a>
                 </article>
             </aside>
         </div>
