Updated html and changes to style sheet

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         </div>
         <footer>
-            <h3>Made with &#128512;
+            <h3>Built not bought &#128128;
                 by Patrick E. Walker</h3>
             <p>
                 &copy; 2021 Rutgers Bootcamp
