updated css with media queries and updated html

--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
             <aside id="work" class="work">
                 <article class="work-box">
                     <h3 class = "work-header" >Horiseon-Refactor</h3>
-                <a href="https://pat31477.github.io/Horiseon/" target=" " ><img src="Assets\Images\demo-horiseon-website.jpg" class="thumbnail"/></a>
+                <a href="https://pat31477.github.io/Horiseon/" target=" " ><img src="Assets\Images\demo-horiseon-website.jpg" alt="Horiseon" class="thumbnail"/></a>
                 </article>
 
                 <article class="work-box">
                     <h3 class = "work-header" >Scratch Mouse Shooter</h3>
-                <a href="https://scratch.mit.edu/projects/476561522" target=" "><img src="Assets\Images\scratch.png" class="thumbnail"/></a>
+                <a href="https://scratch.mit.edu/projects/476561522" target=" "><img src="Assets\Images\scratch.png" alt="Scratch Game" class="thumbnail"/></a>
                 </article>
 
                 <article class="work-box">
                     <h3 class = "work-header" >Coming Soon</h3>
-                <a href="https://placeholder.com" target="_blank" ><img src="Assets/Images/coming-soon.jpg"  class="thumbnail"/></a>
+                <a href="https://placeholder.com" target="_blank" ><img src="Assets/Images/coming-soon.jpg" alt="coming-soon" class="thumbnail"/></a>
                 </article>
 
                 <article class="work-box">
                     <h3 class = "work-header" >Coming Soon</h3>
-                <a href="https://placeholder.com" target="_blank" ><img src="Assets/Images/coming-soon.jpg"  class="thumbnail"/></a>
+                <a href="https://placeholder.com" target="_blank" ><img src="Assets/Images/coming-soon.jpg" alt="coming-soon" class="thumbnail"/></a>
                 </article>
             </aside>
         </div>
