--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Assets/CSS/style.css">
-    <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/PWFavicon.png"/>
+    <link rel="shortcut icon" type="image/x-icon" href="Assets/Images/PFavicon.png"/>
     <title>Patrick E. Walker Portfolio</title>
 </head>
 
